--- a/src/main/resources/assets/frontend/sprints/existingSprint.html
+++ b/src/main/resources/assets/frontend/sprints/existingSprint.html
@@ -117,19 +117,16 @@ $(".nav-tabs li").eq(5).removeClass("active");
                 <label class="col-sm-3 control-label" for="projectId">Associated project</label>
                 <div class="col-sm-10" style="padding-left: 0px;">
                   <div class="col-sm-8">
-                    <select  style="font-size: 17px;min-width: 80px;" ng-show="readOnly" disabled="readOnly" id="projectId" name="projectId" class="form-control"  ng-model="sprint.projectId" required>
-                      <option style="font-size: 17px;" value="" disabled selected>Select a project</option>
-                      <option  style="font-size: 17px; " ng-repeat="project in projectsList"   value= {{project.projectId}}> {{project.projectName}}</option>
-                    </select>
-                    <select  style="font-size: 17px;min-width: 80px;" ng-hide="readOnly" id="projectId" name="projectId" class="form-control"  ng-model="sprint.projectId" required>
-                      <option style="font-size: 17px;" value="" disabled selected>Select a project</option>
-                      <option  style="font-size: 17px; " ng-repeat="project in projectsList"   value= {{project.projectId}}> {{project.projectName}}</option>
+                    <select  style="font-size: 16px;min-width: 80px;" disabled="readOnly" id="projectId" name="projectId" class="form-control"  ng-model="sprint.projectId" required>
+                      <option style="font-size: 16px;" value="" disabled selected>Select a project</option>
+                      <option  style="font-size: 16px; " ng-repeat="project in projectsList"   value= {{project.projectId}}> {{project.projectName}}</option>
                     </select>
                   </div>
                   <div class="col-sm-8">
                     <div ng-messages="form.$submitted && form.projectId.$error" class="help-block">
                       <div ng-message="required">Project selection is required</div>
                     </div>
+
                   </div>
                 </div>
               </div>
