--- a/src/main/resources/assets/frontend/management/management.html
+++ b/src/main/resources/assets/frontend/management/management.html
@@ -23,10 +23,10 @@ p {
             <a ui-sref="management.sprints.sprintsTable">Sprints<span class="pull-right"><i class="glyphicon glyphicon-tasks"><md-tooltip  md-direction="right">  Sprints </md-tooltip></i></span></a>
           </li>
           <li>
-            <a ui-sref="management.people.peopleTable">People<span class="pull-right"><i class="fa fa-users"></i><md-tooltip md-direction="right"> People </md-tooltip></i></span></a>
+            <a ui-sref="management.people.peopleTable">People<span class="pull-right"><i class="fa fa-users"><md-tooltip md-direction="right"> People </md-tooltip></i></span></a>
           </li>
           <li>
-            <a ui-sref="management.repositories.editSkillRepository">Repositories<span class="pull-right"><i class="glyphicon glyphicon-hdd"></i><md-tooltip md-direction="right"> Repositories </md-tooltip></i></span></a>
+            <a ui-sref="management.repositories.editSkillRepository">Repositories<span class="pull-right"><i class="glyphicon glyphicon-hdd"><md-tooltip md-direction="right"> Repositories </md-tooltip></i></span></a>
           </li>
         </ul>
       </div>
