--- a/src/main/resources/assets/frontend/user/manageUser.html
+++ b/src/main/resources/assets/frontend/user/manageUser.html
@@ -1,17 +1,54 @@
-<div ncy-breadcrumb="" ng-cloak >
+<style>
+	p {
+		display: inline;
+	}
+</style>
+<div class="row top-buffer">
+	<div id="page-wrapper">
+		<div id="page-viewport" ng-cloak>
+			<div id="sidebar" position:relative; ">
+        <div id="sidebar-header ">
+          <a href=" " class="toggle-sidebar "><h3>Management</h3></a>
+          <span class="pull-right ">
+            <a href=" " class="toggle-sidebar btn btn-default ">
+              <i class="fa fa-bars "></i>
+            </a>
+          </span>
+        </div>
+        <ul class="nav nav-pills nav-stacked ">
+          <li>
+            <a ui-sref="management.projects.projectsTable ">Projects<span class="pull-right "><i class="glyphicon glyphicon-folder-close "><md-tooltip md-direction="right "> Projects </md-tooltip></i></span></a>
+          </li>
+          <li>
+            <a ui-sref="management.sprints.sprintsTable ">Sprints<span class="pull-right "><i class="glyphicon glyphicon-tasks "><md-tooltip  md-direction="right ">  Sprints </md-tooltip></i></span></a>
+          </li>
+          <li>
+            <a ui-sref="management.people.peopleTable ">People<span class="pull-right "><i class="fa fa-users "><md-tooltip md-direction="right "> People </md-tooltip></i></span></a>
+          </li>
+          <li>
+            <a ui-sref="management.repositories.editSkillRepository ">Repositories<span class="pull-right "><i class="glyphicon glyphicon-hdd "><md-tooltip md-direction="right "> Repositories </md-tooltip></i></span></a>
+          </li>
+        </ul>
+      </div>
+      <div id="sidebar-page-content">
+        <div ncy-breadcrumb=" " ng-cloak >
+        </div>
+        <div class="alert "  style="z-index:1 " uib-alert ng-repeat="alert in alerts " ng-class=" 'alert-' + (alert.type || 'warning') " close="closeAlert($index) " ng-cloak> {{alert.msg}}
+          <button type="button " class="close " data-dismiss="alert " aria-label="Close " ng-click="closeAlert($index) ">
+            <span aria-hidden="true ">&times;</span>
+          </button>
+        </div>
+				<ul class="nav nav-tabs " style="margin-bottom: 10px; ">
+					<li ng-class="getTabClass(1) " ng-click="setActiveTab(1) " ui-sref="manageUser.myDetails({userId: currentUserId}) " ui-sref-opts="{reload: false} "><a  data-toggle="tab " >My details</a></li>
+					<li ng-class="getTabClass(2) " ng-click="setActiveTab(2) " ui-sref="manageUser.createNewUser " ui-sref-opts="{reload: false} "><a   data-toggle="tab " >Create new user</a></li>
+					<li ng-class="getTabClass(3) " ng-click="setActiveTab(3) " ui-sref="manageUser.manageUserAccounts({userId: currentUserId}) " ui-sref-opts="{reload: false} "><a   data-toggle="tab " >Manage user accounts</a></li>
+					<li ng-class="getTabClass(4) " ng-click="setActiveTab(4) " ui-sref="manageUser.manageOptions " ui-sref-opts="{reload: false} "><a   data-toggle="tab " >Options</a></li>
+				</ul>
+				<user-card ng-cloak ng-show="newUserName "  name="{{newUserName | capitalize}} ">
+				</user-card>
+        <div ui-view></div>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="alert"  style="z-index:1" uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)" ng-cloak> {{alert.msg}}
-	<button type="button" class="close" data-dismiss="alert" aria-label="Close" ng-click="closeAlert($index)">
-		<span aria-hidden="true">&times;</span>
-	</button>
-</div>
-<ul class="nav nav-tabs" style="margin-bottom: 10px;">
-	<li ng-class="getTabClass(1)" ng-click="setActiveTab(1)" ui-sref="manageUser.myDetails({userId: currentUserId})" ui-sref-opts="{reload: false}"><a  data-toggle="tab" >My details</a></li>
-	<li ng-class="getTabClass(2)" ng-click="setActiveTab(2)" ui-sref="manageUser.createNewUser" ui-sref-opts="{reload: false}"><a   data-toggle="tab" >Create new user</a></li>
-	<li ng-class="getTabClass(3)" ng-click="setActiveTab(3)" ui-sref="manageUser.manageUserAccounts({userId: currentUserId})" ui-sref-opts="{reload: false}"><a   data-toggle="tab" >Manage user accounts</a></li>
-	<li ng-class="getTabClass(4)" ng-click="setActiveTab(4)" ui-sref="manageUser.manageOptions" ui-sref-opts="{reload: false}"><a   data-toggle="tab" >Options</a></li>
-</ul>
-<user-card ng-cloak ng-show="newUserName"  name="{{newUserName | capitalize}}">
-</user-card>
-<div ui-view>
-</div>
+<script src="js/sidebar.js "></script>
