displaying user privileges on the list of users page

--- a/src/main/resources/assets/frontend/user/manageUserAccounts.html
+++ b/src/main/resources/assets/frontend/user/manageUserAccounts.html
@@ -66,6 +66,7 @@ $(".nav-tabs li").eq(0).removeClass("active");
                   <th>First name</th>
                   <th>Last name</th>
                   <th>Email</th>
+                  <th>Privilege</th>
                   <th>Remove user</th>
                 </tr>
               </thead>
@@ -82,6 +83,12 @@ $(".nav-tabs li").eq(0).removeClass("active");
                   </td>
                   <td>
                     {{user.usermailId}}
+                  </td>
+                  <td ng-if="user.role !=null">
+                    {{user.role}}
+                  </td>
+                  <td ng-if="user.role == null">
+                    -
                   </td>
                   <td>
                     <md-button ng-disabled="user.userId == currentUserId || user.userName == 'admin'" class="md-raised" ng-click="removeUser($event, user)" aria-label="Close">
