Provision for displaying sprint issues using toggle switch

--- a/src/main/resources/assets/frontend/sprints/editAddIssues.html
+++ b/src/main/resources/assets/frontend/sprints/editAddIssues.html
@@ -78,6 +78,9 @@
       margin: 0px 30px;
     }
 </style>
+<div style="margin-top: 15px;" class="alert alert-info" role="alert">
+  <strong>Heads up!</strong> By default, new issues are added to <strong> backlog </strong>. You can select other sprint from drop-down menu by removing <strong> backlog</strong>.
+</div>
 <md-content style="overflow: unset; font-size: 17px;margin-bottom: 50px;">
   <md-whiteframe class="md-whiteframe-18dp" layout layout-align="center center">
     <div class="container ">
