--- a/src/main/resources/assets/frontend/sprints/addIssues.html
+++ b/src/main/resources/assets/frontend/sprints/addIssues.html
@@ -76,11 +76,13 @@
       margin: 0px 30px;
     }
 </style>
+<div style="margin-top: 15px;" class="alert alert-info" role="alert">
+  <strong>Heads up!</strong> By default, new issues are added to <strong> backlog </strong>. You can select other sprint from drop-down menu by removing <strong> backlog</strong>.
+</div>
 <md-content style="overflow: unset; font-size: 17px;margin-bottom: 50px;">
   <md-whiteframe class="md-whiteframe-18dp" layout layout-align="center center">
     <div class="container ">
       <div class="sample" layout="column" ng-cloak>
-
         <md-content>
           <md-tabs md-selected="selectedIndex" md-border-bottom md-autoselect>
             <md-tab ng-repeat="tab in tabs" label="{{tab.title}}">
