--- a/src/main/resources/assets/frontend/sprints/editAddIssues.html
+++ b/src/main/resources/assets/frontend/sprints/editAddIssues.html
@@ -79,7 +79,9 @@
     }
 </style>
 <div style="margin-top: 15px;" class="alert alert-info" role="alert">
-  <strong>Heads up!</strong> By default, new issues are added to <strong> backlog </strong>. You can select other sprint from drop-down menu by removing <strong> backlog</strong>.
+  <strong>Heads up!</strong> By default, new issues are added to <strong> backlog </strong>(if exists). You can select other sprint from drop-down menu by removing <strong> backlog</strong>.
+  <button type="button" style="position: static;" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
 </div>
 <md-content style="overflow: unset; font-size: 17px;margin-bottom: 50px;">
   <md-whiteframe class="md-whiteframe-18dp" layout layout-align="center center">
