toggle switch functionality to change CAST privileges

--- a/src/main/resources/assets/frontend/user/manageUserAccounts.html
+++ b/src/main/resources/assets/frontend/user/manageUserAccounts.html
@@ -49,6 +49,7 @@ svg:not(:root) {
 $(".nav-tabs li").eq(1).removeClass("active");
 $(".nav-tabs li").eq(2).addClass("active");
 $(".nav-tabs li").eq(0).removeClass("active");
+$(".nav-tabs li").eq(3).removeClass("active");
 </script>
 <md-content ng-hide="notAdministrator" style="overflow: unset;" >
   <md-whiteframe class="md-whiteframe-18dp"  layout layout-align="center center">
@@ -66,7 +67,7 @@ $(".nav-tabs li").eq(0).removeClass("active");
                   <th>First name</th>
                   <th>Last name</th>
                   <th>Email</th>
-                  <th>Privilege</th>
+                  <th>CAST privileges</th>
                   <th>Remove user</th>
                 </tr>
               </thead>
@@ -85,7 +86,12 @@ $(".nav-tabs li").eq(0).removeClass("active");
                     {{user.usermailId}}
                   </td>
                   <td ng-if="user.role !=null">
-                    {{user.role}}
+                    <div style="display: inline-flex;">
+                      <p style="margin-top: 5px;">
+                        <md-tooltip md-direction="left">Toggle to change privileges</md-tooltip> User </p>
+                      <md-switch ng-disabled="user.userId == currentUserId || user.userName == 'admin'" style="margin-top: 0;margin-bottom: 0; margin-left: 8px; margin-right: 8px;" class="md-primary" md-no-ink aria-label="Switch No Ink" ng-model="usersPrivileges[user.userId]" ng-change="toggleRoles($event, user)"></md-switch>
+                      <p style="margin-top: 5px;"> Administrator</p>
+                    </div>
                   </td>
                   <td ng-if="user.role == null">
                     -
