--- a/src/main/resources/assets/frontend/summaries/summaries.capabilities.html
+++ b/src/main/resources/assets/frontend/summaries/summaries.capabilities.html
@@ -1,8 +1,3 @@
-<script>
-  $(".nav-tabs li").eq(1).addClass("active");
-  $(".nav-tabs li").eq(0).removeClass("active");
-  $(".nav-tabs li").eq(2).removeClass("active");
-</script>
 <style>
   .md-button.md-default-theme.md-fab,
   .md-button.md-fab {
@@ -24,11 +19,8 @@
   ul {
     margin-left: 10px;
   }
-
-  ol {
-    margin-left: 10px;
-  }
 </style>
+<user-card ng-cloak ng-show="newUserName" name="{{newUserName | capitalize}}" project="{{totalProjects}}"></user-card>
 <md-content style="overflow: unset;margin-bottom: 50px;">
   <md-whiteframe class="md-whiteframe-18dp" layout layout-align="center center">
     <div class="container">
